# hw_card_mask

./: beta_dz_ivan_makarov_git_base.py  main.py  my_log.txt  pyproject.toml
src/: decorators.py  generators.py  masks.py  panda.py  processing.py  re_collections_utils.py  utils.py  widget.py
tests/: my_log.txt  test_decorators.py  test_generators.py  test_masks.py  test_panda.py  test_processing.py  test_sum_divisible_by_3_or_5.py  test_utils.py  test_widgets.py
